--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -17,7 +17,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="96dp"
-        android:text=""
+        android:text="999999999"
         android:textSize="18sp"
         android:drawablePadding="2dp"
         android:textColor="@color/black"
@@ -47,6 +47,7 @@
         android:inputType="number"
         android:textColor="@color/black"
         android:textSize="18sp"
+        android:maxLength="4"
         android:gravity="center"
         android:textStyle="bold"
         android:background="@drawable/round_corner"
