viewmodels and bug fixes

--- a/app/src/main/res/layout/base_recycler.xml
+++ b/app/src/main/res/layout/base_recycler.xml
@@ -25,6 +25,16 @@
                 android:src="@drawable/blur_overlay"
                 android:scaleType="centerCrop"
                 android:alpha="0.9" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Meena"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:layout_gravity="bottom"
+                android:layout_margin="5dp"
+                />
         </androidx.cardview.widget.CardView>
 
 
