--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -1,98 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-    
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
-        
+        android:background="@color/white"
+        android:orientation="vertical">
+
         <TextView
             android:layout_width="102dp"
             android:layout_height="33dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="53dp"
             android:text="@string/notes"
             android:textAlignment="center"
-            android:layout_gravity="center_horizontal"
             android:textColor="@color/black"
             android:textSize="27sp"
-            android:textStyle="bold"
-            android:layout_marginTop="53dp"
-            />
+            android:textStyle="bold" />
+
         <TextView
             android:layout_width="215dp"
             android:layout_height="21dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
             android:text="@string/personal_message_to_you"
             android:textAlignment="center"
-            android:layout_gravity="center_horizontal"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_marginTop="8dp"
-            />
+            android:textStyle="bold" />
+
         <FrameLayout
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="8dp">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:cardCornerRadius="15dp"
-                android:layout_marginTop="8dp"
-                android:elevation="10dp">
+                android:elevation="10dp"
+                app:cardCornerRadius="15dp">
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/photo_girl"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/photo_girl" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:layout_gravity="bottom"
                     android:layout_marginStart="15dp"
                     android:layout_marginBottom="15dp"
-                    >
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Meena, 26"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
                         android:layout_gravity="bottom"
-                        />
+                        android:text="Meena, 26"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Tap to review 50+ notes"
-                        android:textSize="15sp"
-                        android:textStyle="normal"
-                        android:textColor="@color/white"
                         android:layout_gravity="bottom"
-                        />
+                        android:text="Tap to review 50+ notes"
+                        android:textColor="@color/white"
+                        android:textSize="15sp"
+                        android:textStyle="normal" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
-            
+
         </FrameLayout>
-        
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="12dp"
             android:text="@string/interested_in_you"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="12dp"
             android:textSize="22sp"
-            />
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -103,35 +104,49 @@
             <TextView
                 android:layout_width="192dp"
                 android:layout_height="wrap_content"
-                android:text="Premium members can view all their likes at once"
-                android:layout_marginStart="30dp"
-                android:textSize="15sp"
-                />
+                android:layout_marginStart="20dp"
+                android:text="@string/premium_members_can_view_all_their_likes_at_once"
+                android:textColor="#808080"
+                android:textSize="15sp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnContinue"
                 android:layout_width="113dp"
-                android:layout_height="50dp"
-                android:text="@string/upgrade"
-                android:padding="5dp"
+                android:layout_height="45dp"
                 android:layout_gravity="end"
-                android:layout_marginStart="35dp"
-                android:textColor="@color/black"
-                android:textStyle="bold"
+                android:layout_marginStart="25dp"
                 android:background="@drawable/rounded_button"
-                />
+                android:padding="5dp"
+                android:text="@string/upgrade"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            >
 
-            <androidx.recyclerview.widget.RecyclerView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                tools:listitem="@layout/base_recycler"
-               />
+                android:orientation="horizontal">
 
-        
+                <include layout="@layout/base_recycler" />
+
+                <include layout="@layout/base_recycler" />
+
+                <include layout="@layout/base_recycler" />
+
+            </LinearLayout>
+
+        </HorizontalScrollView>
+
+
     </LinearLayout>
-    
+
+
 </ScrollView>
