--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -43,7 +43,7 @@
         android:id="@+id/etOTP"
         android:layout_width="78dp"
         android:layout_height="36dp"
-        android:text="1234"
+        android:text=""
         android:inputType="number"
         android:textColor="@color/black"
         android:textSize="18sp"
